# LearnVulkan

./: .clang-format  .clangd  .gitignore  001.cpp  CMakeLists.txt  README.md  vk_layer_settings.txt
include/: configurator.hpp  configurator_constants.hpp  device_configurator.hpp  instance_configurator.hpp  lvk_allocator.hpp  lvk_buffer.hpp  lvk_definitions.hpp  lvk_device.hpp  lvk_engine.hpp  lvk_game_object.hpp  lvk_gameobject.hpp  lvk_hardware.hpp  lvk_instance.hpp  lvk_model.hpp  lvk_pipeline.hpp  lvk_render_system.hpp  lvk_renderer.hpp  lvk_sdl.hpp  lvk_shader.hpp  lvk_surface.hpp  lvk_swapchain.hpp  lvk_vertex.hpp  physical_device_configurator.hpp  pipeline_configurator.hpp  renderer_configurator.hpp  swapchain_configurator.hpp  window_configurator.hpp
include/util/: wrapper.hpp
shaders/: triangle.frag  triangle.vert
shaders/naive/: naive.vert
shaders/triangle/: triangle.vert
src/: device_configurator.cpp  draw_triangle.cpp  instance_configurator.cpp  lvk_allocator.cpp  lvk_buffer.cpp  lvk_device.cpp  lvk_engine.cpp  lvk_game_object.cpp  lvk_hardware.cpp  lvk_instance.cpp  lvk_model.cpp  lvk_pipeline.cpp  lvk_render_system.cpp  lvk_renderer.cpp  lvk_sdl.cpp  lvk_shader.cpp  lvk_surface.cpp  lvk_swapchain.cpp  lvk_vertex.cpp  main.cpp  physical_device_configurator.cpp  pipeline_configurator.cpp  renderer_configurator.cpp  swapchain_configurator.cpp
src/lvk/: lvk_allocator.cpp  lvk_allocator.hpp  lvk_buffer.hpp  lvk_engine.cpp  lvk_game_object.cpp  lvk_hardware.hpp  lvk_instance.cpp  lvk_model.cpp  lvk_model.hpp  lvk_render_system.hpp  lvk_renderer.cpp  lvk_shader.cpp  lvk_surface.cpp  lvk_surface.hpp  lvk_swapchain.cpp  lvk_swapchain.hpp  lvk_vertex.cpp  lvk_vertex.hpp
src/sdl2pp/: sdl2pp.cpp  sdl2pp.hpp
src/util/: wrapper.cpp
